style(styles.css): change align-items property value from "center" to "end" to align items at the bottom of the container fix(index.html): update href attribute of the "Comenzar" link to point to the correct URL and add target="_blank" to open the link in a new tab

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -193,7 +193,7 @@ body {
   flex-wrap: wrap;
   gap: 2em;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: end;
 }
 
 .price__element {
